--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@
     position: absolute;
     top: 12%;
     left: 5%;
-    padding: 20px;
+    padding: 10px;
     padding-top: 10px;
     animation-name: zoom;
     animation-duration: 1s;
@@ -295,12 +295,20 @@
     animation-fill-mode: forwards;
   
 }
-.sale-images-offerbox{
 
-    font-size: 10px;
+
 }
 
+@media screen and (max-width:400px) {
 
+    .sale-images-offerbox h2{
 
+        font-size: 12px;
+    }
+
+    .sale-images-offerbox p{
+
+        font-size: 12px;
+    }
 
 }
